<resources>
    <string name="app_name" translatable="false">MailToEx</string>
    <string name="description">Write message to your Ex</string>
    <string name="cb1">Do you have a girlfriend?</string>
    <string name="cb2">You are in a bar?</string>
    <string name="email">Enter email:</string>
    <string name="text">Write message:</string>
    <string name="send">Send</string>
    <string name="girlEr">What are ypu doing? You have the girlfriend</string>
    <string name="barEr">Sorry, but you in wrong condition</string>
    <string name="bothEr">At the moment, it is forbidden to you to do it</string>
    <string name="loadBut">Camera</string>
    <string name="Filtr">Select modifications:</string>
    <string name="Without">without mods</string>
    <string name="Girl">girl</string>
    <string name="Car">car</string>
    <string name="Dubai">Dubai</string>
    <string name="takePic">Add picture</string>
    <string name="delPic">Cancel Adding</string>
    <string name="Subject">From my heart with love</string>
    <string name="ok">Sending!</string>
</resources>
